<resources>
    <string name="app_name">NWWA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formText"><b>Verification Form </b></string>
    <string name="formTextDescription">Please Fill the Verification Form in order to get started with the application</string>
    <string name="name">Name</string>
    <string name="phoneno"><font size="12">Phone Number</font></string>
    <string name="dob">Enter Date of Birth</string>
    <string name="code">Enter Code (if any)</string>
    <string name="submit"><b>Submit</b></string>
    <string name="note">Note: \nVerification Process may take few Days.\nYou will be notified once done.</string>
    <string name="note1">Note: \nGetting Appointment may take few Hours or may be one Day.\nYou will be notified once done. \nYou may get a call regarding same</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Samudri</string>
    <string name="title_notifications">Profile</string>
    <string name="kala_kendra">Kala Kendra</string>
    <string name="Saundrya">Saundrya</string>
    <string name="service_heading">Select the Services </string>
    <string name="Book">Book Appointment</string>
    <string name="provider_consol">Provider Consol</string>
    <string name="admin_consol">Admin Consol</string>
    <string name="notification">Notification</string>
    <string name="register_text">Register Yourself as Service Provider for various NWWA Activities</string>
    <string name="verified_providers_login">Verified Providers Login</string>
    <string name="login">Login</string>
    <string name="enter_code">Enter Code</string>
    <string name="pc"><b>PROVIDER CONSOL</b></string>
    <string name="appointment_details">Appointment Details</string>
    <string name="selected_services">Selected Services</string>
    <string name="contact_number">Contact Number</string>
    <string name="name1">Name</string>
    <string name="enter_preffered_date_time">Enter preferred Date and Time</string>
    <string name="request">Request</string>
</resources>
