<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register">

<!--    verification text-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:id="@+id/ver"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:text="@string/formText"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:text="@string/formTextDescription"
        android:textColor="#78909C"
        android:textSize="12sp" />
    </LinearLayout>

<!--    input fields root layout-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/fields"
    android:layout_below="@+id/ver"

    >
<!--    name-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/name"
       android:padding="4dp"
       android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:hintTextAppearance="@style/TextLabel"
        app:errorTextAppearance="@style/CustomTextInputLayoutStyle.ErrorTextStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/name"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
<!--    Phone number-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/phoneNo"
        android:padding="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:hintTextAppearance="@style/TextLabel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/phoneno"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/CustomTextInputLayoutStyle.ErrorTextStyle"
        app:endIconTint="@color/colorPrimaryDark"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

    </com.google.android.material.textfield.TextInputLayout>
<!--    dob-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/dob"
        android:padding="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:hintTextAppearance="@style/TextLabel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/dob"
        app:endIconMode="clear_text"
        app:errorTextAppearance="@style/CustomTextInputLayoutStyle.ErrorTextStyle"
        app:endIconTint="@color/colorPrimaryDark"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:entries="@array/postingType"

        android:padding="4dp"
        android:soundEffectsEnabled="true"
        android:spinnerMode="dropdown"
        android:splitMotionEvents="true"
        android:touchscreenBlocksFocus="true" />
<!--code-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/code"
        app:hintTextAppearance="@style/TextLabel"
        app:errorTextAppearance="@style/CustomTextInputLayoutStyle.ErrorTextStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/code"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorPrimaryDark"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
<!--note-->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/note"
    android:padding="4dp"
    android:textSize="12dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"/>
</LinearLayout>
<!--    submit-->
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/submit" />

</RelativeLayout>